feat(agent): add waitForApi startup probe and improve installer robustness